Actually fix java memory problems by adding memory settings